--- a/src/assets/html/template.html
+++ b/src/assets/html/template.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+<div id="crosshair" class="hidden">
+    <img src="src/assets/img/crosshair.png">
+</div>
+
 <div id="main-menu" class="container-fluid d-flex">
     <div class="col container">
 
