--- a/src/assets/html/template.html
+++ b/src/assets/html/template.html
@@ -11,6 +11,13 @@
     <img src="src/assets/img/crosshair.png">
 </div>
 
+<div id="chat-div" class="hidden">
+    <ul id="chat-ul">
+        <li class="chat-msg">Press enter to write a message</li>
+    </ul>
+    <input id="chat-input" class="hidden" type="text">
+</div>
+
 <div id="main-menu" class="container-fluid d-flex">
     <div class="col container">
 
