--- a/src/server/html/template.html
+++ b/src/server/html/template.html
@@ -8,7 +8,7 @@
 <body>
 
 <div id="crosshair" class="hidden">
-    <img src="src/assets/img/crosshair.png">
+    <img src="../../client/assets/img/crosshair.png">
 </div>
 
 <div id="chat-div" class="hidden">
