--- a/src/server/html/template.html
+++ b/src/server/html/template.html
@@ -7,20 +7,25 @@
 </head>
 <body>
 
-<div id="crosshair" class="hidden">
-    <img src="../../client/assets/img/crosshair.png">
-</div>
+<!-------------------------------- GAME ------------------------------->
+<div id="game-UI">
 
-<div id="chat-div" class="hidden">
-    <ul id="chat-ul">
-        <li class="chat-msg">Press enter to write a message</li>
-    </ul>
-    <input id="chat-input" class="hidden" type="text">
-</div>
+    <div id="crosshair" class="hidden">
+        <img src="img/crosshair.png">
+    </div>
 
-<div id="option-menu" class="hidden">
-    <button id="option-menu-btn-option">Options</button>
-    <button id="option-menu-btn-leave-game">Leave Game</button>
+    <div id="chat-div" class="hidden">
+        <ul id="chat-ul">
+            <li class="chat-msg">Press enter to write a message</li>
+        </ul>
+        <input id="chat-input" class="hidden" type="text">
+    </div>
+
+    <div id="option-menu" class="hidden">
+        <button id="option-menu-btn-option">Options</button>
+        <button id="option-menu-btn-leave-game">Leave Game</button>
+    </div>
+
 </div>
 
 </body>
