--- a/src/server/html/template.html
+++ b/src/server/html/template.html
@@ -10,18 +10,18 @@
 <!-------------------------------- GAME ------------------------------->
 <div id="game-UI">
 
-    <div id="crosshair" class="hidden">
-        <img src="img/crosshair.png">
+    <div id="crosshair">
+        <img src="../img/crosshair.png">
     </div>
 
-    <div id="chat-div" class="hidden">
+    <div id="chat-div">
         <ul id="chat-ul">
             <li class="chat-msg">Press enter to write a message</li>
         </ul>
         <input id="chat-input" class="hidden" type="text">
     </div>
 
-    <div id="option-menu" class="hidden">
+    <div id="option-menu" class="d-none">
         <button id="option-menu-btn-option">Options</button>
         <button id="option-menu-btn-leave-game">Leave Game</button>
     </div>
