--- a/src/server/html/template.html
+++ b/src/server/html/template.html
@@ -10,13 +10,18 @@
 <!-------------------------------- GAME ------------------------------->
 <div id="game-UI">
 
+    <div id="info">
+
+    </div>
+
     <div id="crosshair">
         <img src="../img/crosshair.png">
+
     </div>
 
     <div id="chat-div">
         <ul id="chat-ul">
-            <li class="chat-msg">Press enter to write a message</li>
+            <li class="chat-msg">Press <img class="keyboard-enter" src="../img/enter.png"> to write a message</li>
         </ul>
         <input id="chat-input" class="hidden" type="text">
     </div>
