--- a/src/server/html/template.html
+++ b/src/server/html/template.html
@@ -14,6 +14,28 @@
 
     </div>
 
+    <div id="weapon-UI">
+
+
+        <div id="current-weapon">
+            <div class="d-flex">
+                <div id="current-weapon-bullet"></div>
+                /
+                <div id="current-weapon-maxbullet"></div>
+                <div id="current-weapon-stored-bullet"></div>
+            </div>
+            <div>
+
+            </div>
+        </div>
+
+        <div id="weapons">
+
+        </div>
+
+
+    </div>
+
     <div id="crosshair">
         <img src="../img/crosshair.png">
 
