SoundManager + ui improvement

--- a/src/server/html/template.html
+++ b/src/server/html/template.html
@@ -14,10 +14,17 @@
 
     </div>
 
+    <div id="current-weapon-fpsview">
+        <img src="../img/weapons/pistol/fpsview.png">
+    </div>
+
     <div id="weapon-UI">
 
 
         <div id="current-weapon">
+
+
+
             <div class="d-flex">
                 <div id="current-weapon-bullet"></div>
                 /
