--- a/src/server/html/template.html
+++ b/src/server/html/template.html
@@ -56,7 +56,25 @@
     </div>
 
     <div id="option-menu" class="d-none">
+        <button id="option-menu-btn-resume">Resume</button>
+
+
         <button id="option-menu-btn-option">Options</button>
+        <div id="option-panel" class="d-none">
+
+            <div id="option-panel-sensitivity">
+                <input type="range" id="sound-input"
+                       min="0" max="1" step="0.1">
+                <label for="sound-input">Volume</label>
+            </div>
+
+            <div id="option-panel-sound">
+                <input type="range" id="sesitivity-input"
+                       min="0" max="2" step="0.1">
+                <label for="sesitivity-input">Mouse sensitivity</label>
+            </div>
+        </div>
+
         <a id="option-menu-btn-leave-game" href="/">Leave Game</a>
     </div>
 
