[FEATURE] persistent game chat messages

--- a/src/server/html/template.html
+++ b/src/server/html/template.html
@@ -58,9 +58,9 @@
 
     <div id="chat-div">
         <ul id="chat-ul">
-            <li class="chat-msg">Press <img class="keyboard-enter" src="../img/enter.png"> to write a message</li>
+            <!--<li class="chat-msg">Press <img class="keyboard-enter" src="../img/enter.png"> to write a message</li>-->
         </ul>
-        <input id="chat-input" class="hidden" type="text">
+        <input id="chat-input" class="" placeholder="Press [Enter] to write a message" type="text">
     </div>
 
     <div id="option-menu" class="d-none">
