[FEATURE] player colors + chat upgrade

--- a/src/server/html/template.html
+++ b/src/server/html/template.html
@@ -4,6 +4,7 @@
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <meta charset="UTF-8">
     <title>Z3D</title>
+    <link rel="stylesheet" type="text/css" href="../fonts/HelpMe.ttf" >
 </head>
 <body>
 
@@ -60,7 +61,7 @@
         <ul id="chat-ul">
             <!--<li class="chat-msg">Press <img class="keyboard-enter" src="../img/enter.png"> to write a message</li>-->
         </ul>
-        <input id="chat-input" class="" placeholder="Press [Enter] to write a message" type="text">
+        <input id="chat-input" class="" placeholder="Press ENTER to write a message" type="text">
     </div>
 
     <div id="option-menu" class="d-none">
