[BUGFIX] green join button

--- a/src/server/html/LandingPage.html
+++ b/src/server/html/LandingPage.html
@@ -197,6 +197,7 @@
         const a = document.createElement('a')
         a.innerText = innerText
         a.href = link
+        a.classList.add('btn', 'btn-success')
         return a
     }
 
