[FEATURE] Knife weapon

--- a/src/server/html/template.html
+++ b/src/server/html/template.html
@@ -22,6 +22,10 @@
         <img src="../img/weapons/pistol/fpsview.png">
     </div>
 
+    <div id="knife">
+        <img src="../img/weapons/knife/knife.png">
+    </div>
+
     <div id="wave"></div>
 
     <div id="points">
@@ -29,7 +33,6 @@
     </div>
 
     <div id="weapon-UI">
-
 
         <div id="current-weapon">
 
@@ -47,7 +50,6 @@
         <div id="weapons">
 
         </div>
-
 
     </div>
 
