--- a/src/server/html/template.html
+++ b/src/server/html/template.html
@@ -36,7 +36,7 @@
 
         <div id="current-weapon">
 
-            <div class="d-flex">
+            <div class="d-flex weapon-bullets">
                 <div id="current-weapon-bullet"></div>
                 /
                 <div id="current-weapon-maxbullet"></div>
