[FEATURE] Simple collision (stop) + Client Doors

--- a/src/server/html/template.html
+++ b/src/server/html/template.html
@@ -18,6 +18,12 @@
 
     </div>
 
+    <div id="action-gui">
+        <div id="action-gui-message">
+
+        </div>
+    </div>
+
     <div id="current-weapon-fpsview">
         <img src="../img/weapons/pistol/fpsview.png">
     </div>
