[FEATURE] google oauth

--- a/src/server/html/LandingPage.html
+++ b/src/server/html/LandingPage.html
@@ -46,6 +46,8 @@
         <div class="row mb-5">
             <div class="col">
 
+                <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google"></span> SignIn with Google</a>
+
                 <h2>Set username</h2>
 
                 <label class="form-label" for="set-username">Username</label>
